--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -95,7 +95,7 @@
                                 <a href="{{ event.link }}" class="event-link" target="_blank" rel="noopener"
                                     aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
                                     <img class="card-img-top card-img" src="{{ event.image.url }}"
-                                        alt="{{ event.name }}">
+                                        alt="{{ event.name }} on {{ event.date|date:'M o' }}">
                                     <h1 class="card-title">{{ event.name }}</h1>
                                 </a>
                                 <p class="card-text">{{ event.date|date:"M o" }}</p>
