--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,6 +20,11 @@
   --gw-link: #7EB2DD;
   --gw-link-visited: #2F6990;
   --gw-link-hover: #578DB6;
+
+  --gw-font-size-1: clamp(1rem, 0.3077rem + 3.0769vw, 3rem);
+  --gw-font-size-2: clamp(1.625rem, 0.5rem + 5vw, 4.875rem);
+  --gw-font-size-3: clamp(2.625rem, 0.8077rem + 8.0769vw, 7.875rem);
+  --gw-font-size-4: clamp(4.25rem, 1.3077rem + 13.0769vw, 12.75rem);
 }
 
 
@@ -262,6 +267,7 @@ body {
 }
 
 p {
-  font-size: clamp(1rem, 1.5rem, 2rem);
-  font-size: 1rem;
+  /* font-size: clamp(1rem, 1.5rem, 2rem); */
+  /* font-size: 1.5rem; */
+  font-size: clamp(1rem, 0.3077rem + 3.0769vw, 3rem);
 }
