--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -5,7 +5,7 @@
 {% block extra_title %}Checkout{% endblock %}
 {% block content %}
 <!-- template taken from code institute boutique ado walkthrough -->
-<div class="container mb-2">
+<div class="container mb-2 border border-5 border-dark">
     <div class="row">
         <div class="col">
             <h2>Checkout</h2>
