--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -8,13 +8,13 @@
 <div class="container mb-2 border border-5 border-dark col-10">
     <h2>Checkout</h2>
     <div class="row">
-        <div class="col-12 col-lg-6 mb-5">
+        <div class="col-12 mb-5">
             <p class="text-muted">Order Summary ({{ product_count }})</p>
             <div class="row">
                 <div class="col-7 offset-2">
                     <p class="mb-1 mt-0 small text-muted">Item</p>
                 </div>
-                <div class="col-3">
+                <div class="col-3 ms-auto p-0">
                     <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                 </div>
             </div>
